[package]
name = "lab_allocator"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
allocator = { git = "https://github.com/arceos-org/allocator.git", tag ="v0.1.0", features = ["bitmap"] }
buddy_system_allocator = { version = "0.10", default-features = false }
slab_allocator = { git = "https://github.com/arceos-org/slab_allocator.git", tag = "v0.3.1", optional = true }
rlsf = { version = "0.2", optional = true }
log = "0.4.21"
